--- a/package.json
+++ b/package.json
@@ -3,26 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "next": "^12.0.4",
-    "pg": "^8.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "@material-ui/core": "4.11.3",
+    "@prisma/client": "^3.10.0",
+    "axios": "^0.26.0",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/pg": "^8.6.1",
-    "@types/react": "17.0.35",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
-    "typescript": "4.4.4"
+    "@prisma/cli": "2.15.0",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "prisma": "^3.10.0",
+    "typescript": "^4.6.2"
   }
 }
