--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "4.11.3",
-    "@prisma/client": "^3.10.0",
-    "axios": "^0.26.0",
-    "next": "12.1.0",
+    "@material-ui/core": "4.12.4",
+    "@prisma/client": "^4.5.0",
+    "axios": "^1.1.3",
+    "next": "^12.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@prisma/cli": "2.15.0",
-    "@types/node": "^17.0.21",
+    "@types/node": "^18.11.3",
     "@types/react": "^17.0.39",
-    "prisma": "^3.10.0",
-    "typescript": "^4.6.2"
+    "prisma": "^4.5.0",
+    "typescript": "^4.8.4"
   }
 }
